hasqd/tests/coptest/system/pos/005.sts
#!/bin/sh
$1/zdb erasedisk "create _md5 wrd MD5 1 [abc] 1 0" load "addpwd _md5 0:1 rdn:1:2 pass"
$1/hasqd -c s=005.inp dprn=1 dsvt=1
$1/zdb erasedisk

