hasqd/tests/coptest/system/neg/005.sts
#!/bin/sh
$1/hasqd -lnc s=005.inp dsvt=1 dprn=1

